KM-552 fixed bg color and compny url text misalignmnet issue

--- a/react/public/css/style.css
+++ b/react/public/css/style.css
@@ -9526,6 +9526,7 @@ pointer-events: none;
 .company-url-form-group {
   width: 350px;
   position: relative;
+  margin-bottom: 0px;
 }
 
 .company-url-form-group::after {
